--- a/index.html
+++ b/index.html
@@ -13,27 +13,57 @@
     <header>
         <a href="index.html">
             E-Sport
-            <i class="fas fa-running logo"></i> <!-- https://fontawesome.com/v5/search?q=spor&o=r&m=free&f=classic%2Cbrands -->
+            <i class="fas fa-running logo"></i>
+            <!-- https://fontawesome.com/v5/search?q=spor&o=r&m=free&f=classic%2Cbrands -->
         </a>
     </header>
 
     <div class="page-container">
         <aside id="side-menu">
             <a href="index.html">Home
-                <i class="fas fa-home"></i>"
+                <i class="fas fa-home"></i> <!-- Am eliminat ghilimeaua în plus -->
             </a>
 
             <a href="pages/evenimente.html">Evenimente
                 <i class="fas fa-calendar-plus"></i>
             </a>
 
-
-            <a href="pages/content.html">Contacte
+            <a href="pages/contacte.html">Contacte
                 <i class="far fa-id-card"></i>
-            </a></aside>
+            </a>
+        </aside>
         <main>
             <h2 class="title">Home</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vel repudiandae asperiores ullam. Earum incidunt similique doloribus optio animi accusamus at dolore, minus voluptate, neque, quia praesentium ratione totam veritatis!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vel repudiandae asperiores ullam. Earum
+                incidunt similique doloribus optio animi accusamus at dolore, minus voluptate, neque, quia praesentium
+                ratione totam veritatis!</p>
+
+            <video class="intro-video" muted autoplay src="resources/Emilian - Romania ( Euro 2024 ).mp4"></video>
+            <!-- Am corectat 'resorces' în 'resources' -->
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, commodi! Porro, esse error ipsa animi
+                amet possimus eligendi perspiciatis similique dolore, dolores consectetur, enim culpa quod expedita
+                commodi facilis aliquid!
+            </p>
+
+            <div class="gallery">
+                <a target="_blank" href="images/sport1.jpeg">
+                    <img src="images/sport1.jpeg">
+                </a>
+
+                <a target="_blank" href="images/sport2.jpeg">
+                    <img src="images/sport2.jpg">
+                </a>
+
+                <a target="_blank" href="images/sport3.jpg">
+                    <img src="images/sport3.jpg">
+                </a>
+
+                <a target="_blank" href="images/sport4.webp">
+                    <img src="images/sport4.webp">
+                </a>
+
+                <div>
         </main>
     </div>
 
