--- a/pages/contacte.html
+++ b/pages/contacte.html
@@ -21,18 +21,18 @@
     <div class="page-container">
         <aside id="side-menu">
             <a href="../index.html">Home
-                <i class="fas fa-home"></i>"
+                <i class="fas fa-home"></i>
             </a>
 
             <a href="evenimente.html">Evenimente
                 <i class="fas fa-calendar-plus"></i>
             </a>
 
-
-            <a href="content.html">Contacte
+            <a href="contacte.html">Contacte
                 <i class="far fa-id-card"></i>
             </a>
         </aside>
+
         <main>
             <h2 class="title">Contacte</h2>
         </main>
