--- a/pages/contacte.html
+++ b/pages/contacte.html
@@ -35,6 +35,23 @@
 
         <main>
             <h2 class="title">Contacte</h2>
+
+            <div class="row">
+                <div class="col-50">
+                    <h3>Contacaza-ne daca:
+                        <ul class="contact-list">
+                            <li>Doresti sa adaugi un eveniment</li>
+                            <li>Cauti un loc de voluntariat</li>
+                            <li>doresti sa gasesti un cerc de sport</li>
+                            <li>Ai sugesti propuneri</li>
+
+                        </ul>
+                    </h3>
+
+                </div>
+            </div>
+
+
         </main>
     </div>
 
