--- a/pages/contacte.html
+++ b/pages/contacte.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <title>E-Sport</title>
 </head>
 
@@ -14,7 +14,6 @@
         <a href="../index.html">
             E-Sport
             <i class="fas fa-running logo"></i>
-            <!-- https://fontawesome.com/v5/search?q=spor&o=r&m=free&f=classic%2Cbrands -->
         </a>
     </header>
 
@@ -38,23 +37,46 @@
 
             <div class="row">
                 <div class="col-50">
-                    <h3>Contacaza-ne daca:
-                        <ul class="contact-list">
-                            <li>Doresti sa adaugi un eveniment</li>
-                            <li>Cauti un loc de voluntariat</li>
-                            <li>doresti sa gasesti un cerc de sport</li>
-                            <li>Ai sugesti propuneri</li>
+                    <h3>Contactează-ne dacă:</h3>
+                    <ul class="contact-list">
+                        <li>Dorești să adaugi un eveniment</li>
+                        <li>Cauti un loc de voluntariat</li>
+                        <li>Dorești să găsești un cerc de sport</li>
+                        <li>Ai sugestii sau propuneri</li>
+                    </ul>
+                </div>
 
-                        </ul>
-                    </h3>
+                <div class="col-50">
+                    <h3>Date de contact:</h3>
+                    <ul class="contact-list">
+                        <li><b>Adresă:</b> str. Domnească 5</li>
+                        <li><b>Telefon:</b> 022 000 012</li>
+                        <li><b>Ore de lucru:</b> 10:00 - 18:00</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-50">
+                    <iframe class="maps"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.9343854373737!2d28.054821000000015!3d45.430823999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b6df0036779dd1%3A0x5e544e4acdeb75b3!2sStrada%20Domnească%205%2C%20Galați%20827100!5e0!3m2!1sro!2sro!4v1723620020052!5m2!1sro!2sro"
+                        style="allowfullscreen" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
 
+                <div class="col-50">
+                    <div class="contact-form">
+                        <form>
+                            <h3 class="centered">Lasă un mesaj</h3>
+                            <input type="text" placeholder="Nume" required />
+                            <input type="email" placeholder="Email" required />
+                            <textarea rows="3" placeholder="Mesaj" required></textarea>
+                            <input type="submit" value="Transmite" />
+                        </form>
+                    </div>
                 </div>
             </div>
 
-
         </main>
     </div>
-
     <script src="../js/main.js"></script>
 </body>
 
