--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
             <i class="fas fa-running logo"></i>
             <!-- https://fontawesome.com/v5/search?q=spor&o=r&m=free&f=classic%2Cbrands -->
         </a>
+
+        <i id="menu-btn" class="fas fa-bars" onclick="show()"></i>
     </header>
 
     <div class="page-container">
         <aside id="side-menu">
             <a href="index.html">Home
-                <i class="fas fa-home"></i> <!-- Am eliminat ghilimeaua în plus -->
+                <i class="fas fa-home"></i>
+                <!-- Am eliminat ghilimeaua în plus -->
             </a>
 
             <a href="pages/evenimente.html">Evenimente
@@ -39,7 +42,7 @@
                 ratione totam veritatis!</p>
 
             <video class="intro-video" muted autoplay src="resources/Emilian - Romania ( Euro 2024 ).mp4"></video>
-            <!-- Am corectat 'resorces' în 'resources' -->
+
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, commodi! Porro, esse error ipsa animi
                 amet possimus eligendi perspiciatis similique dolore, dolores consectetur, enim culpa quod expedita
