--- a/pages/contacte.html
+++ b/pages/contacte.html
@@ -15,6 +15,7 @@
             E-Sport
             <i class="fas fa-running logo"></i>
         </a>
+        <i id="menu-btn" class="fas fa-bars" onclick="show()"></i>
     </header>
 
     <div class="page-container">
@@ -55,11 +56,12 @@
                     </ul>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-50">
                     <iframe class="maps"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2799.9343854373737!2d28.054821000000015!3d45.430823999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b6df0036779dd1%3A0x5e544e4acdeb75b3!2sStrada%20Domnească%205%2C%20Galați%20827100!5e0!3m2!1sro!2sro!4v1723620020052!5m2!1sro!2sro"
-                        style="allowfullscreen" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
 
                 <div class="col-50">
