--- a/pages/evenimente.html
+++ b/pages/evenimente.html
@@ -16,6 +16,7 @@
             <i class="fas fa-running logo"></i>
             <!-- https://fontawesome.com/v5/search?q=spor&o=r&m=free&f=classic%2Cbrands -->
         </a>
+        <i id="menu-btn" class="fas fa-bars" onclick="show()"></i>
     </header>
 
     <div class="page-container">
