--- a/pages/evenimente.html
+++ b/pages/evenimente.html
@@ -29,9 +29,10 @@
                 <i class="fas fa-calendar-plus"></i>
             </a>
 
-            <a href="content.html">Contacte
+            <a href="contacte.html">Contacte
                 <i class="far fa-id-card"></i>
             </a>
+
         </aside>
         <main>
             <h2 class="title">Evenimente</h2>
@@ -42,9 +43,7 @@
                     <div class="event">
                         <h4>Titlu </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima
-                            mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit!
-                            Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
                         </p>
                     </div>
                 </div>
@@ -53,12 +52,8 @@
                     <div class="event">
                         <h4>Titlu </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima
-                            mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit!
-                            Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
-                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur
-                            necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet
-                            ipsa velit nostrum dignissimos autem!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
+                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
                         </p>
                         <!-- Corectarea închiderii duble a paragrafului -->
                     </div>
@@ -71,9 +66,7 @@
                     <div class="event">
                         <h4>Titlu </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima
-                            mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit!
-                            Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
                         </p>
                     </div>
                 </div>
@@ -82,12 +75,8 @@
                     <div class="event">
                         <h4>Titlu </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima
-                            mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit!
-                            Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
-                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur
-                            necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet
-                            ipsa velit nostrum dignissimos autem!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
+                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
                         </p>
                     </div>
                 </div>
@@ -96,9 +85,7 @@
                     <div class="event">
                         <h4>Titlu </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima
-                            mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit!
-                            Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
                         </p>
                     </div>
                 </div>
@@ -107,12 +94,8 @@
                     <div class="event">
                         <h4>Titlu </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima
-                            mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit!
-                            Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
-                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur
-                            necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet
-                            ipsa velit nostrum dignissimos autem!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
+                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
                         </p>
                     </div>
                 </div>
