--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <aside id="side-menu">
             <a href="index.html">Home
                 <i class="fas fa-home"></i>
-                <!-- Am eliminat ghilimeaua în plus -->
             </a>
 
             <a href="pages/evenimente.html">Evenimente
@@ -37,39 +36,36 @@
         </aside>
         <main>
             <h2 class="title">Home</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque vel repudiandae asperiores ullam. Earum
-                incidunt similique doloribus optio animi accusamus at dolore, minus voluptate, neque, quia praesentium
-                ratione totam veritatis!</p>
+            <p>Echipa națională a României a reușit o performanță extraordinară la Campionatul European, demonstrând curaj și determinare în fiecare meci. În faza grupelor, tricolorii au învins echipe puternice precum Germania și Spania, obținând puncte
+                cruciale care i-au ajutat să avanseze în fazele eliminatorii. Jocul lor a fost marcat de o apărare solidă și o ofensivă creativă, captând atenția fanilor din întreaga lume.</p>
 
-            <video class="intro-video" muted autoplay src="resources/Emilian - Romania ( Euro 2024 ).mp4"></video>
+            <!-- Înlocuirea iframe cu tag-ul video -->
+            <video src="resources/Emilian - Romania ( Euro 2024 ).mp4" class="intro-video" controls muted autoplay></video>
 
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, commodi! Porro, esse error ipsa animi
-                amet possimus eligendi perspiciatis similique dolore, dolores consectetur, enim culpa quod expedita
-                commodi facilis aliquid!
+                În optimi, România s-a confruntat cu Franța într-un meci de intensitate maximă. După un meci echilibrat și plin de tensiune, tricolorii au reușit să se impună în prelungiri, calificându-se în sferturile de finală. Acest parcurs incredibil a demonstrat
+                nu doar abilitățile tehnice ale jucătorilor, dar și unitatea și spiritul de echipă care i-au caracterizat pe parcursul turneului.
             </p>
 
             <div class="gallery">
                 <a target="_blank" href="images/sport1.jpeg">
-                    <img src="images/sport1.jpeg">
+                    <img src="images/sport1.jpeg" alt="Sport Image 1">
                 </a>
 
                 <a target="_blank" href="images/sport2.jpeg">
-                    <img src="images/sport2.jpg">
+                    <img src="images/sport2.jpg" alt="Sport Image 2">
                 </a>
 
                 <a target="_blank" href="images/sport3.jpg">
-                    <img src="images/sport3.jpg">
+                    <img src="images/sport3.jpg" alt="Sport Image 3">
                 </a>
 
                 <a target="_blank" href="images/sport4.webp">
-                    <img src="images/sport4.webp">
+                    <img src="images/sport4.webp" alt="Sport Image 4">
                 </a>
-
-                <div>
+            </div>
         </main>
     </div>
-
     <script src="js/main.js"></script>
 </body>
 
