--- a/pages/evenimente.html
+++ b/pages/evenimente.html
@@ -41,19 +41,20 @@
             <div class="row row-event">
                 <div class="col-50">
                     <div class="event">
-                        <h4>Titlu </h4>
+                        <h4>Tensiunea Crește: Pregătirea pentru Sferturi de Finală </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Înaintea sferturilor de finală, tensiunea a crescut, iar pregătirile intense s-au reflectat în antrenamentele zilnice ale echipei. Strategia antrenorului a fost ajustată pentru a se potrivi cu stilul agresiv al echipei adverse. Cu un moral ridicat, suporterii
+                            și jucătorii au arătat o conexiune profundă, reprezentând o sursă constantă de inspirație și motivare pe parcursul competiției.
                         </p>
                     </div>
                 </div>
 
                 <div class="col-50">
                     <div class="event">
-                        <h4>Titlu </h4>
+                        <h4>Sferturile de Finală: O Demonstrație de Forță </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
-                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Sfertul de finală a fost o demonstrație de forță și determinare. Jucătorii au intrat pe teren cu o energie debordantă, reușind să marcheze două goluri rapide în prima jumătate a meciului. Apărarea a stat solid, respingând atacurile repetate ale adversarilor
+                            și demonstrând coeziunea perfectă între liniile defensive.
                         </p>
                         <!-- Corectarea închiderii duble a paragrafului -->
                     </div>
@@ -64,38 +65,40 @@
             <div class="row row-event">
                 <div class="col-50">
                     <div class="event">
-                        <h4>Titlu </h4>
+                        <h4>Analiza Tehnică: Cheia Succesului în Semifinale</h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Pregătirea pentru semifinale a implicat analize detaliate ale jocurilor anterioare ale adversarilor. Echipa de analiză tehnică a furnizat jucătorilor informații cruciale care au ajutat la formularea unor tactici adaptate specific pentru a contracara punctele
+                            forte ale oponenților.
                         </p>
                     </div>
                 </div>
 
                 <div class="col-50">
                     <div class="event">
-                        <h4>Titlu </h4>
+                        <h4>Semifinala: Un Spectacol de Neuitat </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
-                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Semifinala a fost un punct culminant al turneului, cu momente de joc spectaculoase care au captivat audiența internațională. Cu un joc ofensiv impresionant, România a reușit să depășească așteptările și să se califice în finală, spre bucuria suporterilor
+                            care au urmărit fiecare pas al parcursului echipei.
                         </p>
                     </div>
                 </div>
 
                 <div class="col-50">
                     <div class="event">
-                        <h4>Titlu </h4>
+                        <h4>Finala: Testul Suprem al Determinării</h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Finala a fost un test suprem de rezistență și spirit de luptă. Echipa a fost încurajată de mii de suporteri care au călătorit pentru a fi alături de jucători. Fiecare minut al meciului a fost plin de tensiune și emoție, reflectând dorința arzătoare a
+                            fiecărui jucător de a aduce trofeul acasă.
                         </p>
                     </div>
                 </div>
 
                 <div class="col-50">
                     <div class="event">
-                        <h4>Titlu </h4>
+                        <h4>Reflectarea Asupra Turneului: Lecții de Mândrie Națională </h4>
                         <p>
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem! Lorem ipsum dolor
-                            sit, amet consectetur adipisicing elit. Eaque sunt nihil officia, minima mollitia pariatur necessitatibus? Eligendi eveniet, consectetur repellendus iste quam velit! Tempore, amet ipsa velit nostrum dignissimos autem!
+                            Deși rezultatul final nu a fost cel dorit, efortul și pasiunea arătate de echipa României pe parcursul întregului campionat european vor rămâne în istorie. Această competiție a fost o lecție de tenacitate, unitate și mândrie națională, stabilind un precedent
+                            pentru viitoarele competiții internaționale.
                         </p>
                     </div>
                 </div>
